# oly

./: .gitignore  Makefile.am  README  README.adoc  _config.yml  autogen  configure.ac  i18n.mk  index.html  index.md  make_i18n.mk  params.json
ac-aux/: config.guess  ltmain.sh
ac-aux/m4/: acx_pthread.m4  oly_check_icu.m4
data/: olyrc.yaml
doc/: Initialization_process.dia  Makefile.am  Makefile.in  bibliography.adoc  bibliography.wiki  code_standards.txt  code_standards.wiki  data_source_interface.adoc  data_source_interface.txt  data_source_interface.wiki  external_interface.dia  glossary.adoc  glossary.txt  glossary.wiki  index.txt  index.wiki  inline_in_automake.adoc  inline_in_automake.txt  inline_in_automake.wiki  input_doc.adoc  input_doc.txt  input_doc.wiki  oly-csv-parse-flowchart.dia  oly_interface.dia  presentation.adoc
doc/conf/: fossil.conf  olyfoss.css
docs/: Makefile.in  index.adoc  node_delivery_flowchart.dia
docs/man/: oly.txt
i18n/: Makefile.am  Makefile.in  en.txt  en_US.txt  ja.txt  lkt.txt  root.txt  zh.txt
lib/: Makefile.am  Makefile.in  basename.c  pretend.c  readline.c  strerror.c  strlcpy.c  strsignal.c  strtok_r.c  wcswidth.c
lib/libltdl/: Makefile.inc
lib/sha_three/: KeccakNISTInterface.h  Makefile.am  Makefile.in
maint/: cleanin.sh  move_dir.bash  move_file.bash  move_header.bash  sha3_digest.pl
replace/: Makefile.in  getopt_long.c  strcspn.c  strlcat.c  strspn.c  waitpid.c  wcwidth.c
resources/: Makefile.am  Makefile.in  el_GR.txt  en.txt  es.txt  root.txt
sha_three/: Makefile  Makefile.in
src/: Makefile  builtin.c  common.h  config-h.in  converters.h  error.c  error.h  eval.c  eval.h  get_rules.c  list.c  list.h  loader.h  main.c  oly.c  oly.h  oly_dev.h  olyconf-h.in  olyio.h  output.h  print_at.c  print_each_backward.c  print_each_forward.c  print_first.c  print_last.c  print_text_range.c  pvt_config.h  pvt_core.h  pvt_data_source.h  pvt_hash.h  pvt_load_config.h  pvt_node.h  pvt_oly.h  pvt_resources.h  pvt_state.h  syntax.c  ubreak.c  xmalloc.c  xstrerror.c
src/core/: basic_functions.c  builtin.c  clean_io_open.c  cleanenv.c  close_metastring.c  close_oly.c  config.c  count_file_bytes.c  count_nondelim_chars.c  count_tokens.c  cstr_to_ostr.c  dispatch.c  error.c  eval.c  get_default_charset.c  get_default_locale.c  get_errmsg.c  get_i18n_errmsg.c  get_i18n_errstring.c  get_init_charset.c  get_init_locale.c  get_liberror.c  get_ochar_args.c  get_oly_locale.c  init_all.c  init_charset.c  init_io.c  init_locale.c  init_oly.c  init_olyopt_storage.c  is_big_endian.c  list.c  memory_left_now.c  new_metastring.c  new_oly.c  oget_home.c  oget_user_locale.c  oly.c  oly_charset.c  oly_fatal.c  (+26 more)
src/data_source/: boundary.c  boundary.h  collection_ds.c  data_source.c  data_source_main.c  doc_data_functions.c  get_ltdl_errmsg.c  node.c  oly_sqlite3.h  oly_yaml.c  oly_yaml.h  pvt_boundary.h  pvt_collection_ds.h  pvt_node.h  pvt_oly_yaml.h
src/debug/: bash_printing.c  display_resource_type.c  flag_check.c  flag_res_display.c  get_resource_type.c  ifelse_res_display.c  init_res_disp_flag.c  level_indent.c  list_array_resources.c  list_bundle_resources.c  list_icu_countries.c  list_icu_langs.c  list_package_locales.c  list_table_resources.c  print_config.c
src/hash/: char_to_size.c  char_to_uint32.c  get_hashbits.c  get_str_hashlen.c  hash_to_uint32.c  n_to_uint32.c  n_to_uint64.c  nchar_bitand.c  nchar_bitnot.c  nchar_bitor.c  nchar_to_int.c  oly_hash.c  print_nint_as_hex.c  pvt_hash.h  read_charhash_from_hex.c  read_hash_from_hex.c  (+4 more)
tests/: Makefile.am  Makefile.in  TESTS  atconfig  realistic_data.txt  user_account_testdata.csv
tests/data/: every_token.yaml  olyrc  orig_breaks.txt  spawner_output.txt  supabreak.txt  zh_romance_of_three_kingdoms.txt
tests/data/i18n/: el.txt  en.txt  en_US.txt  en_US_POSIX.txt  root.txt  zh.txt
tests/oly/: core.t  hash.t  i18n.t  io.t  loader.t  olyio.t  resources.t  state.t
tests/oly/core/: c-basic_functions.c  c-basic_functions.output  c-count_file_bytes.c  c-count_file_bytes.output  c-count_file_bytes.result  c-count_nondelim_chars.c  c-count_tokens.c  c-count_tokens.output  c-get_errmsg.c  c-get_errmsg.output  c-get_ochar_args.c  c-linked_list.c  c-oget_home.c  c-oget_user_locale.c  c-oly_config.c  c-oly_getOCharArgs.c  c-oly_gettime.result  c-oly_struct.c  c-oly_timestamp.c  c-string_buffer.c  c-string_buffer.output  c-test_gcc_encoding.c  c-token_str_to_array.c  c-token_str_to_array.output  c-token_str_to_array.result  sh-get_ochar_args  sh-oget_home  sh-oget_home.output  sh-oget_user_locale  sh-oget_user_locale.output  sh-oly_getOCharArgs  sh-oly_getOCharArgs.output  sh-resex  sh-resex.result
tests/oly/data_source/: c-oly_yaml.c
tests/oly/hash/: c-char_to_size.c  c-char_to_uint32.output  c-get_hashbits.c  c-get_str_hashlen.c  c-get_str_hashlen.output  c-hash_char_to_hash_size.c  c-hash_char_to_hash_uint32.c  c-hash_to_uint32.c  c-n_to_uint.c  c-n_to_uint.output  c-read_charhash_from_hex.c  c-read_hash_from_hex.c  c-read_sizehash_from_hex.c  sh-get_hashbits.output  sh-hash_char_to_hash_size  sh-read_charhash_from_hex  sh-read_hash_from_hex  sh-read_hash_from_hex.output  sh-read_sizehash_from_hex
tests/oly/i18n/: c-alias.c  c-alias.output  c-el.c  c-el.output  c-fallback-lang.c  c-fallback_lang.c  c-fallback_lang.output  c-ja.c  c-missing-lang.c  c-missing-resource.c  c-missing_lang.c  c-missing_lang.output  c-missing_resource.c  c-root.c  c-root.output
tests/oly/io/: sh-oly_get_OCharArgs
tests/oly/loader/: c-oget_home.c
tests/oly/node/: c-infer_simple_tag.c  c-infer_simple_tag.output
tests/oly/olyio/: c-oly_getOCharArgs.c  sh-oly_getOCharArgs
tests/oly/resources/: c-alias.c  c-el.c  c-el_gr.c  c-el_gr.output  c-fallback-lang.c  c-ja.c  c-ja.output  c-missing-lang.c  c-missing-resource.c  c-root.c
tests/oly/state/: c-init_state.c  c-new_state.c  c-new_state.output
tests/prototypes/: check-resex.sh  incl-yaml_to_sqlite.c  resex.c  yaml_config.c  yaml_to_sqlite.c
tests/tap/: basic.c  basic.h  is_unicode_string.c  is_unicode_string.h
tests/tools/: resex.c
(+96 files in other folders)
